test-suite/typecheck/pass/type_alias_use.first
type P = { x: Int };
function f() -> P { return { x: 42 }; }
