test-suite/typecheck/fail/return_missing.first
function f() -> Int {
  let x = 42;
}
